@@ -84,34 +84,35 @@
 #define __rtai_event_delete       31
 #define __rtai_event_wait         32
 #define __rtai_event_signal       33
-#define __rtai_event_inquire      34
-#define __rtai_mutex_create       35
-#define __rtai_mutex_bind         36
-#define __rtai_mutex_delete       37
-#define __rtai_mutex_lock         38
-#define __rtai_mutex_unlock       39
-#define __rtai_mutex_inquire      40
-#define __rtai_cond_create        41
-#define __rtai_cond_bind          42
-#define __rtai_cond_delete        43
-#define __rtai_cond_wait          44
-#define __rtai_cond_signal        45
-#define __rtai_cond_broadcast     46
-#define __rtai_cond_inquire       47
-#define __rtai_queue_create       48
-#define __rtai_queue_bind         49
-#define __rtai_queue_delete       50
-#define __rtai_queue_alloc        51
-#define __rtai_queue_free         52
-#define __rtai_queue_send         53
-#define __rtai_queue_recv         54
-#define __rtai_queue_inquire      55
-#define __rtai_heap_create        56
-#define __rtai_heap_bind          57
-#define __rtai_heap_delete        58
-#define __rtai_heap_alloc         59
-#define __rtai_heap_free          60
-#define __rtai_heap_inquire       61
+#define __rtai_event_clear        34
+#define __rtai_event_inquire      35
+#define __rtai_mutex_create       36
+#define __rtai_mutex_bind         37
+#define __rtai_mutex_delete       38
+#define __rtai_mutex_lock         39
+#define __rtai_mutex_unlock       40
+#define __rtai_mutex_inquire      41
+#define __rtai_cond_create        42
+#define __rtai_cond_bind          43
+#define __rtai_cond_delete        44
+#define __rtai_cond_wait          45
+#define __rtai_cond_signal        46
+#define __rtai_cond_broadcast     47
+#define __rtai_cond_inquire       48
+#define __rtai_queue_create       49
+#define __rtai_queue_bind         50
+#define __rtai_queue_delete       51
+#define __rtai_queue_alloc        52
+#define __rtai_queue_free         53
+#define __rtai_queue_send         54
+#define __rtai_queue_recv         55
+#define __rtai_queue_inquire      56
+#define __rtai_heap_create        57
+#define __rtai_heap_bind          58
+#define __rtai_heap_delete        59
+#define __rtai_heap_alloc         60
+#define __rtai_heap_free          61
+#define __rtai_heap_inquire       62
 
 struct rt_arg_bulk {
 
